fix alignment

--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -4,9 +4,10 @@
 }
 
 .grid-item {
+    display: flex;
     width: 16rem;
-    align-self: center;
     justify-self: center;
+    justify-content: center;
 }
 
 .grid-item:hover {
